# Jackal-Engine

./: .gitignore  CMakeLists.txt  README.md  main.cpp  make.bat  test_class.lua
assets/materials/: basic-lighting-material.json  basic-material.json  basic-unlit-material.json
assets/shaders/: basic-lighting-shader.json  basic-shader.json  basic-unlit-shader.json  basic_shader.fragment.glsl
assets/textures/: basic-texture.json  box-diffuse-texture.json  box-specular-texture.json
cmake/: FindAssimp.cmake  FindAwesomium.cmake  FindJGLEW.cmake  FindSDL2.cmake  FindSDL2_image.cmake
data/config/: main.jcfg
data/csv/: test.csv
data/locale/: en_UK.properties
data/shaders/: basic-lighting.fragment.glsl  basic-lighting.vertex.glsl  basic-unlit.fragment.glsl  basic-unlit.vertex.glsl  basic.fragment.glsl  basic.vertex.glsl
doc/html/: annotated.html  buffer_8hpp_source.html  class_json_1_1_char_reader-members.html  class_json_1_1_char_reader.html  class_json_1_1_char_reader_1_1_factory-members.html  class_json_1_1_char_reader_1_1_factory.html  class_json_1_1_char_reader_builder-members.html  class_json_1_1_char_reader_builder.html  class_json_1_1_exception-members.html  class_json_1_1_exception.html  class_json_1_1_fast_writer-members.html  class_json_1_1_fast_writer.html  class_json_1_1_features-members.html  class_json_1_1_features.html  class_json_1_1_logic_error-members.html  class_json_1_1_logic_error.html  class_json_1_1_our_char_reader-members.html  class_json_1_1_our_char_reader.html  class_json_1_1_our_features-members.html  class_json_1_1_our_features.html  class_json_1_1_our_reader-members.html  class_json_1_1_our_reader.html  class_json_1_1_path-members.html  class_json_1_1_path.html  class_json_1_1_path_argument-members.html  class_json_1_1_path_argument.html  class_json_1_1_reader-members.html  class_json_1_1_reader.html  class_json_1_1_runtime_error-members.html  class_json_1_1_runtime_error.html  class_json_1_1_static_string-members.html  class_json_1_1_static_string.html  class_json_1_1_stream_writer-members.html  class_json_1_1_stream_writer.html  class_json_1_1_stream_writer_1_1_factory-members.html  class_json_1_1_stream_writer_1_1_factory.html  class_json_1_1_stream_writer_builder-members.html  class_json_1_1_stream_writer_builder.html  class_json_1_1_styled_stream_writer-members.html  class_json_1_1_styled_stream_writer.html  (+197 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_6.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  functions_0.js  functions_1.js  functions_10.js  (+34 more)
include/jackal/core/: camera.hpp  component_type.hpp  component_type_controller.hpp  config_file.hpp  entity_component_system.hpp  game_object.hpp  icomponent.hpp  isystem.hpp  object.hpp  resource.hpp  virtual_file_system.hpp  window.hpp
include/jackal/math/: colour.hpp  matrix4.hpp  transform.hpp  vector2.hpp  vector2.inl  vector3.hpp  vector3.inl  vector4.hpp  vector4.inl
include/jackal/rendering/: buffer.hpp  directional_light.hpp  glsl_object.hpp  gui_texture.hpp  gui_texture_factory.hpp  ilight.hpp  irenderable.hpp  material.hpp  mesh.hpp  model.hpp  program.hpp  shader.hpp  texture.hpp  uniform.hpp  vertex.hpp
include/jackal/scripting/: core_wrapper.hpp  math_wrapper.hpp  script.hpp  scriptable.hpp  scripting_manager.hpp
include/jackal/utils/: constants.hpp  container.hpp  context_settings.hpp  csv_file_reader.hpp  file_policy.hpp  file_reader.hpp  file_system.hpp  ipolicy.hpp  json_file_reader.hpp  log.hpp  log.inl  non_copyable.hpp  properties.hpp  resource.hpp  resource_cache.hpp  resource_cache.inl  resource_handle.hpp  resource_manager.hpp  singleton.hpp
src/: CMakeLists.txt
src/core/: CMakeLists.txt  camera.cpp  component_type.cpp  component_type_controller.cpp  config_file.cpp  entity_component_system.cpp  game_object.cpp  icomponent.cpp  isystem.cpp  object.cpp  virtual_file_system.cpp  window.cpp
src/math/: CMakeLists.txt  colour.cpp  matrix4.cpp  transform.cpp  vector2.cpp
src/rendering/: CMakeLists.txt  buffer.cpp  directional_light.cpp  glsl_object.cpp  gui_texture.cpp  gui_texture_factory.cpp  ilight.cpp  irenderable.cpp  material.cpp  mesh.cpp  model.cpp  program.cpp  shader.cpp  texture.cpp  uniform.cpp
src/scripting/: CMakeLists.txt  core_wrapper.cpp  math_wrapper.cpp  script.cpp  scriptable.cpp  scripting_manager.cpp
src/utils/: CMakeLists.txt  constants.cpp  context_settings.cpp  csv_file_reader.cpp  file_policy.cpp  file_reader.cpp  file_system.cpp  json_file_reader.cpp  properties.cpp  resource.cpp  resource_manager.cpp
src/utils/json/: jsoncpp.cpp
